# Votex

./: CMakeLists.txt  README.md  voting.cpp
